1.5.3
• Fixed AppSetId Hook Definitions Setting Names
• Fixed Some Internal Bugs
• Improved and STAT File TimeStamp Interception (Detection, and Logic)
• Added NIO Java File Attributes Time Stamp Hooks
• Fixed Binder Interceptor Setting Linking
• Added AppSetId IPC Binder Hook
• Fixed Force Stop Check not working on Save Settings
• Synced and Improve App Time Stamp ID Spoofing (for now you will need to Enable ID File State for the best results)
• Improved IPC Spoofing (IPC Binder, Query, Call)
• Added Wildcard Hooking for Method and Bypass Hidden Api Restrictions
• Redesigned the Hooking Core and Type Resolver
• Fixed AD ID Constructor Hook (Int to Boolean for Second Argument)
• Improved Type Resolving for Hook Definitions
• Added Ability to Target Multiple Classes with a Hook Definition Delimiting each Target Class with \'|\'
• Removed Storage UUID Hooks (Storage Volume UUIDs are not Unique)
• Added Storage Available Size Hooks (x3) (No you cant Control the Value it is fine let XPL-EX Handle it)
• Added Android User Account Creation Date Hooks
• Added Setting to Control a List of Force to Show Settings versus using Defaults if Returned
• Added Popup Dialog for Long Setting Descriptions
• Fixed Some Bugs in Scripts, Typos Etc
• Added and Improved Xiaomi Hooks
• Added more Java LUA Api Functions
• Improved the String to Long Parsing
• Added more KeyguardManager Hooks (Seems it MAY be for Coosea Devices) (obtainOaid, obtainVaid, obtainOaid)
• Fixed Google Maps API not loading in Apps when STAT Hooks are Enabled
• Improved the File STAT Time Randomization and Setting
• Improved the Call/Settings,Query,File, Prop Filters
• Updated and Improved most of the LUA Scripts to make More Safe when Returning Log Arguments
• Updated and Improved and Cleaned up the XParam API splitting it with XPramExtra, added more API Functions etc (This is API that is exposed to LUA Script from param)
• Improved or Added Query Hooks (Android ID, GSF ID, ...)
• Updated GSF ID Randomizer, align m